# higher_ed_snapshot

./: .gitignore  README.md  pyproject.toml
genplot/: datatable.py  earnings.py  multimap.py  plot_structures.py  utils.py
notebooks/: trends.html  trends.ipynb
scripts/: build_map.py  build_table.py
